--- a/release/index.html
+++ b/release/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Title Page</title>
-		<link rel=stylesheet href="./static/plekan.css">
+		<link rel=stylesheet href="static/plekan.css">
 	</head>
 	<body>
 		
@@ -17,9 +17,9 @@
 			 <div class="twocloumn" v-html="content"></div>
 		</script>
 		
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.min.js"></script>
-		<script src="./plekan.js"></script>
-		<script src="./plekanmodules.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.min.js"></script>
+		<script src="plekan.js"></script>
+		<script src="plekanmodules.js"></script>
 		<script>
 
 			var newComponent = Vue.component('xx',{
