Updated thumbnail paths

--- a/release/index.html
+++ b/release/index.html
@@ -49,6 +49,7 @@
 			  languages : ["tr","en"],
 			  customComponents:customComponents,
 			  modules:plekanmodules,
+			  thumbnailPath : "static/",
 			  plekan_buttons : {
 			  	save : {
 			  		text : "Save",
