Updated icon link

--- a/release/index.html
+++ b/release/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Title Page</title>
 		<link rel=stylesheet href="static/plekan.css">
+   		<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
+
 	</head>
 	<body>
 		
