Place holder image added for broken image link

--- a/release/index.html
+++ b/release/index.html
@@ -67,7 +67,7 @@
 			  plekan_buttons : {
 			  	save : {
 			  		text : "Save",
-			  		class:"plekan-footer-button cancel",
+			  		class:"plekan-footer-button save",
 			  		callback : function (e) {
 			  			console.log(e)
 			  		}
